specs/stage/web/identity/kratos/kratos.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kratos-ilink
  namespace: ilink
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: kratos-ilink-tls
      hosts:
        - 'identity.ilink.pw'
